--- a/templates/index.html
+++ b/templates/index.html
@@ -56,7 +56,7 @@
     <div id="carouselExampleControls" class="carousel slide text-center carousel-dark" data-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img class="rounded-circle shadow-1-strong mb-4" src="../static/images/gfglogo.jpg" alt="avatar"
+                <img class="rounded-circle shadow-1-strong mb-4" src="../static/images/icon.jpg" alt="avatar"
                     style="width: 150px;" />
                 <div class="row d-flex justify-content-center">
                     <div class="col-lg-8">
