Error archives added and something more

--- a/templates/index.html
+++ b/templates/index.html
@@ -290,7 +290,7 @@
                                             <p class="mb-0"><strong>Email</strong></p>
 
 
-                                            <p>skr@gmail.com</p>
+                                            <p>m8vikram@gmail.com</p>
 
                                         </div>
                                     </div>
